--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +91 7219731110</p>
+<p>Email: sakharkargourav7757@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Ward no 3, Pulgaon,Dt. Wardha (MS)<br />
+  Pulgaon<br />
+  India <br />
 </p>
